objects/CCA2_Application_Goal_Score__c.object
<CustomObject>
    <fields>
        <fullName>Answered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this question been answered by the user</description>
        <inlineHelpText>Has this question been answered by the user</inlineHelpText>
        <label>Answered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Name__c</fullName>
        <formula>CCA2_Application_Goal__r.Application_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>App Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCA2_Application_Goal__c</fullName>
        <label>CCA2_Application Goal</label>
        <referenceTo>CCA2_Application_Goal__c</referenceTo>
        <relationshipName>CCA2_Application_Goal_Scores</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CCA2_Response__c</fullName>
        <label>CCA2_Response</label>
        <referenceTo>CCA2_Response__c</referenceTo>
        <relationshipName>CCA2_Application_Goal_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>The question for this applicationGoalScore</description>
        <formula>CCA2_Response__r.CCA2_Question__r.Name</formula>
        <inlineHelpText>The question for this applicationGoalScore</inlineHelpText>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommended_goal_score_range__c</fullName>
        <label>Recommended goal score range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>The Response to the question for this ApplcationGoalScore</description>
        <formula>CCA2_Response__r.Answer__c</formula>
        <inlineHelpText>The Response to the question for this ApplcationGoalScore</inlineHelpText>
        <label>Response</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Application Goal Score</label>
    <nameField>
        <displayFormat>AGS-{00000}</displayFormat>
        <label>CCA2_Application Goal Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Goal Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>